# math

./: README.md
hp/asm/: Examples.bz  readme.txt  toolbox.txt
hp/examples/browser48/: browser48  browser48.s
hp/examples/browser49/: browser49  browser49.s
hp/examples/first/: first.s
hp/examples/include/: filer.h  inputform.h  keycodes.h
hp/examples/inputform/: inputform  inputform.s
hp/examples/inputline/: inputline  inputline.s
hp/examples/keyboard/: getkey.s
hp/examples/lams/: lam1  lam1.s  lam2  lam2.s  lam3  lam3.s
hp/examples/pol/: pol  pol.s
hp/hp48cc-1.3/: COPYRIGHT  Makefile.in  NEWS  README  acconfig.h  config.h.in  configure  configure.in  hp48cc.lsm  version.h
hp/hp48cc-1.3/examples/: README  accuracy.hpc  astro.hpc  fact.hpc  gcd.hpc  hello.hpc  inform.hpc  pi1.hpc  pi2.hpc  sort.hpc  tutorial.hpc  xcos.hpc  xexp.hpc  xsin.hpc
hp/hp48cc-1.3/lib/: Makefile.in  err.c  err.h  xmalloc.c  xrealloc.c  xstrdup.c
hp/hp48cc-1.3/src/: Makefile.in  hp48cc.1  hp48cc.c  lexer.l  parser.y
hp/hp50_src/: B_H_aco_fundido.txt  B_H_aco_silicio.txt  B_H_ferro_niquel.txt  README.md  angulo_plano.txt  angulo_vetores.txt  b  cauchy_cartesiana.txt  cauchy_polar.txt  complexo_forma_abi.txt  complexo_forma_exponencial.txt  equacao_plano.txt  estrela_triangulo.txt  harmonica_complexo.txt  inducao_cabo_coaxial.txt  inducao_solenoide_ar.txt  inducao_toroide_raio_medio.txt  projecao_vetores.txt  resistores_paralelos.txt  resistores_serie.txt  rlc_serie_resposta_natural.txt  solucao_sistemas_lineares.txt  triangulo_estrela.txt  uart_p18f.txt
hp/hp50_src/extremos_funcao/: CONDI.txt  DECO.txt  EXT.txt  MAIN.txt  RESUMO.txt  SOBRE.txt  SUBEXT.txt
hp/hp50_src/logaritimo_complexo/: LOGCOM.txt  MAINCON.txt  SOBRE.txt
hp/projeto/: BACKUP.txt  DESINSTALAR.txt  EXCLUIR.txt  FAZER.txt  GERARID.txt  INSBACKUP  INSBACKUP.txt  MOSTRAR.txt  RESTAURAR.txt  VERSAO.txt  notas.txt
hp/scripts/: .gitignore  Makefile  a.hp50  abs.hp50  abs.hpprg  array_loop.hp50  bascara.hpprg  briot.hp50  briot_ruffini.hp50  clean.hp50  comb_loop.hp50  divisor_corrente.hp50  ex_01.hp  ex_01.hpprg  ex_02.hp  ex_02.hpprg  ex_03.hpprg  ex_1.hp50  ex_2.hp50  ex_3  exemplo.hp50  exercicio_2_pg.hp50  exercicio_pg.hp50  fatoracao_1.hp50  fatoracao_2.hp50  fatorial_de_n_loop.hp50  hp.mk  hp50.sed  input2.hp50  input2.hpprg  lista_operacoes.hp50  matriz_01.hp50  media_loop.hp50  resistencia_paralelo.hp50  resistencia_paralelo.hp50.OLD  resistencia_paralelo.hpprg  rp.hp  soma_puc.hp50  soma_while.hp50  soma_while.hpc  (+6 more)
hp/scripts/cir/: clean.hp50  divisor_corrente.hp50  mkcir.hp50  mkdir.hp50  resistencia_paralelo.hp50  rm.hp50
hp/scripts/input/: clean.hp50  d2r.hp  din.hp  mkdir.hp50  mkinput.hp50  s2c.hp  stack_to_complex.hp50  toogle_deg_rad.hp50  toogle_pho_theta.hp50
hp/scripts/lib/: mth.txt  program.txt  stat.txt  symbolic.txt  units.txt
hp/scripts/poly/: Makefile  basic.hp50  briot.hp50  clean.hp50  digitician.src  mkdir.hp50  mkpoly.hp50  root.hp50
hp/scripts/sd/: INSTALL  calculo.hp  cir.hp  clean.hp  dc.hp  deg2rad.hp  p1.hp  poly.hp  root  root.hp  rp.hp  stk2c.hp  uff.hp
hp/scripts/sd/TablaPeriodicaPlus/: Tabla Peri¢dica v23.doc  TablaPeriodicaPlus23.lib
hp/scripts/sd/cir/: clean.hp  rp.hp
hp/scripts/sd/input/: mkdir.hp  pho2theta.hp
hp/scripts/sd/poly/: briot.hp  clean.hp  mkdir.hp
hp/scripts/uff/: Makefile  calc.hp  cir.hp  derivadaEIntegral.hp50  digitician.src  digitician.txt  edo.hp  exemplo.hp50  formula-calculo-derivadas.hp50  formula-calculo-integral.hp50  formula-calculo.hp50  head.hp  hp.mk  input.hp  input.txt  latextogrob.sh  mec.hp  mount.sh  poly.hp  root.hp  sep.hp  sol.hp  statistica.hp  tail.hp  transcode.sed  uff.hp  uff.hp50
hp/scripts/uff/sd/: derivada.hp  integral.hp  ivan.hp  lp1.hp  sintegral.hp  uff.hp
hp/scripts/uff/sd/imagens/: ds.grb  ir.grb
hp/scripts/uff/sd/tt/: AAVIEW  BASES.LIB  CENW.L1099  Calc3_1.0_49.lib  Calc48.lib  Calc49.lib  L1611  L802  L993  LUPA  SFCN.49  Series.LIB  VMaza.lib  XM01.GRI  XM02.GRI  XM03.GRI  XM04.GRI  XM05.GRI  XM06.GRI  XM07.GRI  XM08.GRI  XM09.GRI  ayuda Calc1.txt  briot.2.hp  canu50v3.49g  clean.2.hp  cvunt.hp  dc.2.hp  demosin.hp  demosin_src.hp  divpro49  mkcir.hp  pho2theta.2.hp  pho2theta.hp  roman49.dir  trueno.hp  uff.2.hp  uff.3.hp  uff.hp  ufl1.lib  (+2 more)
hp/scripts/uff/tt/: a  a.pl  dd
maple/Matrizes, Sistemas Lineares e Determinantes/: Makefile  at1_01.mws
series-taylor/: .gitignore  GIT-HELP.txt  Makefile.am  autogen.sh  configure.ac  configure.ac.example  configure.scan  git-clean.sh
series-taylor/codegen/: 01-maple.sh  01-matlab.sh  01-wolfram.sh  01_example.m  example.m  mat_prog_1.m  taylor.txt
series-taylor/maple/: Makefile.am
series-taylor/maple/01-exemplo/: 01-taylor.mpl  02-taylor.mpl  03-taylor.mpl  04-taylor.mpl  05-taylor.mpl  06-taylor.mpl  07-taylor.mpl  Makefile  Makefile.am  a.tex  ex1.mpl  examples-CodeGeneration.mw  formula.mpl  gnuplot.taylor  t_x.tex  taylor.mpl
series-taylor/maple/exemplo01/: Makefile  Makefile.am  usamts.tex
