dnl Process this file with autoconf to produce a configure script.
AC_INIT(version.h)
AC_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_PROG_LEX
AC_DECL_YYTEXT
AC_PROG_YACC

dnl Checks for libraries.
AC_REPLACE_FUNCS(err xmalloc xrealloc xstrdup)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(strerror)

AC_OUTPUT(Makefile lib/Makefile src/Makefile)
