texs = $(wildcard *.tex)

EXT           = png dvi ps pdf log dvi aux out glo ist bak nav out snm toc
CONVERTE      = convert
CONVERTEFLAGS = -density 300 -quality 90

outFiles      = $(foreach tex,$(texs), $(addprefix $(tex:.tex=.), $(EXT)))

# -------------------------------------------------------------------------- #
# shell macro
# -------------------------------------------------------------------------- #
withpngtargets=\
	for d in $(texs); \
	do \
		echo $${d%.tex}.pdf; \
		echo $${d%.tex}.png; \
	done
targets=\
	for d in $(texs); \
	do \
		echo $${d%.tex}.pdf; \
	done
##############################################################################

# -------------------------------------------------------------------------- #
# rules
# -------------------------------------------------------------------------- #

# tex -> dvi
%.dvi:  %.tex
	$(LATEX) $(@:.dvi=)

# dvi -> ps
%.ps:   %.dvi
	$(DVIPS) $(@:.ps=)

# ps -> pdf
%.pdf:  %.ps
	$(PS2PDF) $^

# ps -> png

%.png:  %.ps
	$(CONVERTE) $(CONVERTEFLAGS) $^ $@
##############################################################################

# -------------------------------------------------------------------------- #
# -------------------------------------------------------------------------- #
# -------------------------------------------------------------------------- #

if HAS_TEX_TOOLS

all        : $(shell $(targets))

endif

# ----------------------------------------------------------------------------
# ----------------------------------------------------------------------------
# ----------------------------------------------------------------------------

if HAS_MAPLE_CMD

maple: ex1.out

ex1.out: ex1.mpl
	@cat $^
	@$(MAPLE) -q < $^ | tee $@

endif

# auto clean.
CLEANFILES = $(outFiles) *.out
#
# END OF FILE
